set(LLVM_LINK_COMPONENTS
  support
  )

add_clang_tool(cu2sycl
  Analysis.cpp
  Cu2Sycl.cpp
  SourceTransformation.cpp
  Refinement.cpp
  Translation.cpp
  )

target_link_libraries(cu2sycl
  PRIVATE
  clangAnalysis
  clangAST
  clangASTMatchers
  clangBasic
  clangDriver
  clangEdit
  clangFormat
  clangFrontend
  clangLex
  clangParse
  clangRewrite
  clangSema
  clangSerialization
  clangTooling
  clangToolingCore
  )
